--- a/style.css
+++ b/style.css
@@ -1,17 +1,8 @@
 
-
-h1, h5  {
+h1, h5, a  {
     text-align: center;
    }
 
-a {
-    
-    text-decoration: none;
-    color: black;
-    background-color: red;
-    padding: 3px;
-    border: solid 2px gray
-}
 
    #game-board {
     display: flex;
