--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 h1, h5, a  {
     text-align: center;
+    color: black;
    }
 
 
@@ -36,6 +37,7 @@ h1, h5, a  {
    /* keyboard styles */
 
    #keyboard-cont {
+    width: 100%;
     margin: 1rem 0;
     display: flex;
     flex-direction: column;
