--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ h1, h5, a  {
    /* keyboard styles */
 
    #keyboard-cont {
-    width: 100%;
     margin: 1rem 0;
     display: flex;
     flex-direction: column;
@@ -53,10 +52,10 @@ h1, h5, a  {
    }
 
    .keyboard-button {
-    font-size: 1vw;
+    font-size: 3.5vw;
     font-weight: 700;
-    padding: 0.5rem;
-    margin: 0 2px;
+    padding: 0.5vw;
+    margin: 0 1px;
     cursor: pointer;
     text-transform: uppercase;
    }
@@ -65,6 +64,6 @@ h1, h5, a  {
     color: red;
    }
 
-   row {
+   /* row {
     width: 100%;
-   }
+   } */
