--- a/style.css
+++ b/style.css
@@ -1,3 +1,72 @@
+@media all and (min-width: 421px) {
+    img {
+        display: none;
+    }
+    
+    h1, h5, a  {
+        text-align: center;
+        color: black;
+       }
+
+    .reset-button {
+        color: red;
+       }
+    
+     
+   
+    #game-board {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+      }
+      
+      .letter-box {
+        border: 2px solid gray;
+        border-radius: 3px;
+        margin: 2px;
+        font-size: 2.5rem;
+        font-weight: 700;
+        height: 3rem;
+        width: 3rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-transform: uppercase;
+      }
+      
+      .filled-box {
+        border: 2px solid black;
+      }
+      
+      .letter-row {
+        display: flex;
+      }
+
+      #keyboard-cont {
+        margin: 1rem 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      
+      #keyboard-cont div {
+        display: flex;
+      }
+      
+      .second-row {
+        margin: 0.5rem 0;
+      }
+      
+      .keyboard-button {
+        font-size: 1rem;
+        font-weight: 700;
+        padding: 0.5rem;
+        margin: 0 2px;
+        cursor: pointer;
+        text-transform: uppercase;
+      }
+  }
+@media all and (max-width: 420px){
 img {
     display: none;
 }
@@ -67,6 +136,4 @@ h1, h5, a  {
     color: red;
    }
 
-   /* row {
-    width: 100%;
-   } */
+}
