--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@media all and (min-width: 421px) {
+@media all and (min-width: 521px) {
     img {
         display: none;
     }
@@ -66,7 +66,8 @@
         text-transform: uppercase;
       }
   }
-@media all and (max-width: 420px){
+
+@media all and (max-width: 520px){
 img {
     display: none;
 }
@@ -137,3 +138,76 @@ h1, h5, a  {
    }
 
 }
+
+
+@media all and (max-width: 250px){
+  img {
+      display: none;
+  }
+  
+  h1, h5, a  {
+      text-align: center;
+      color: black;
+     }
+  
+  
+     #game-board {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+  
+     }
+  
+     .letter-box {
+      border: 2px solid gray;
+      border-radius: 3px;
+      margin: 2px;
+      font-size: 2.5rem;
+      font-weight: 700;
+      height: 3rem;
+      width: 3rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-transform: uppercase;
+     }
+  
+     .filled-box {
+      border: 2px solid black;
+     }
+  
+     .letter-row {
+      display: flex;
+     }
+  
+     /* keyboard styles */
+  
+     #keyboard-cont {
+      margin: 1rem 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+     }
+     
+     #keyboard-count div {
+      display: flex;
+     }
+  
+     .second-row {
+      margin: 1rem 0;
+     }
+  
+     .keyboard-button {
+      font-size: 3vw;
+      font-weight: 700;
+      padding: 0.5vw;
+      margin: 0 1px;
+      cursor: pointer;
+      text-transform: uppercase;
+     }
+  
+     .reset-button {
+      color: red;
+     }
+  
+  }
