--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,7 @@ h1, h5, a  {
      }
   
      .keyboard-button {
+      background-color: whitesmoke;
       font-size: 3vw;
       font-weight: 700;
       padding: 0.5vw;
